--- a/GreenShop/web/WEB-INF/web.xml
+++ b/GreenShop/web/WEB-INF/web.xml
@@ -112,6 +112,10 @@
         <servlet-name>Sale</servlet-name>
         <servlet-class>controller.Sale</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AddComment</servlet-name>
+        <servlet-class>controller.AddComment</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>test</servlet-name>
         <url-pattern>/test</url-pattern>
@@ -223,6 +227,10 @@
     <servlet-mapping>
         <servlet-name>Sale</servlet-name>
         <url-pattern>/Sale</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddComment</servlet-name>
+        <url-pattern>/AddComment</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
